# LegionWorld

./: .gitignore  CMakeLists.txt  revision.h.in.cmake
dep/protobuf/: CMakeLists.txt
src/server/bnetserver/: CMakeLists.txt  Main.cpp  bnetserver.conf.dist  bnetserver.rc
src/server/bnetserver/PrecompiledHeaders/: bnetPCH.h
src/server/bnetserver/REST/: LoginRESTService.cpp
src/server/bnetserver/Server/: Session.cpp  SslContext.cpp
src/server/bnetserver/Services/: ServiceDispatcher.cpp
src/server/newscripts/Draenor/: CMakeLists.txt  dark_portal.cpp  frostfire_ridge.cpp  world_bossess_draenor.cpp
src/server/newscripts/Draenor/Auchindoun/: auchindoun.cpp  boss_azakael.cpp  boss_kaathar.cpp  boss_nyami.cpp  boss_teronogor.cpp
src/server/newscripts/Draenor/BloodmaulSlagMines/: bloodmaul_slag_mines.cpp  boss_forgemaster_gogduh.cpp  boss_gugrokk.cpp  boss_roltall.cpp  boss_slave_watcher_crushto.cpp
src/server/newscripts/Draenor/Highmaul/: boss_brackenspore.cpp  boss_imperator_margok.cpp  boss_kargath_bladefist.cpp  boss_koragh.cpp  boss_tectus.cpp  boss_the_butcher.cpp  boss_twin_ogron.cpp  highmaul.cpp
src/server/newscripts/Draenor/IronDocks/: boss_fleshrender_nokgar.cpp  boss_grimrail_enforcers.cpp  boss_oshir.cpp  boss_skulloc.cpp  instance_iron_docks.cpp
src/server/newscripts/Draenor/PrecompiledHeaders/: DraenorPCH.cpp
src/server/newscripts/Draenor/ShadowmoonBurialGrounds/: boss_bonemaw.cpp  boss_nerzhul.cpp  boss_nhallish.cpp  boss_sadana_bloodfury.cpp
src/server/newscripts/Draenor/Skyreach/: boss_high_sage_viryx.cpp  boss_ranjit.cpp  boss_rukhran.cpp
src/server/newscripts/Draenor/TheEverbloom/: boss_ancient_protectors.cpp  boss_archmage_sol.cpp  boss_witherbark.cpp  boss_xeritac.cpp  boss_yalnu.cpp  instance_the_everbloom.cpp
src/server/newscripts/Draenor/UpperBlackrockSpire/: boss_commander_tharbek.cpp  boss_orebender_gorashan.cpp  boss_ragewing_untamed.cpp  boss_warlord_zaela.cpp  instance_upper_blackrock_spire.cpp  upper_blackrock_spire.cpp
src/server/newscripts/Legion/: CMakeLists.txt  invasion_point_argus.cpp  invasion_point_world_bosses.cpp  mardum.cpp  sentinax.cpp  sentinax.h  warden_prison.cpp  world_bossess_legion.cpp
src/server/newscripts/Legion/AntorusTheBurningThrone/: antorus.cpp  antorus.h  boss_aggramar.cpp  boss_antoran.cpp  boss_argus.cpp  boss_coven_shivarres.cpp  boss_eonar.cpp  boss_felhounds.cpp  boss_hasabel.cpp  boss_imonar.cpp  boss_kingaroth.cpp  boss_varimathras.cpp  boss_worldbreaker.cpp  instance_antorus.cpp
src/server/newscripts/Legion/BlackRookHoldDungeon/: black_rook_hold_dungeon.h  boss_illysanna_ravencrest.cpp  boss_lord_kurtalos_ravencrest.cpp  boss_smashspite_the_hateful.cpp  boss_the_amalgam_of_souls.cpp  instance_black_rook_hold_dungeon.cpp
src/server/newscripts/Legion/CathedralEternalNight/: boss_agronox.cpp  boss_domatrax.cpp  boss_mephistroth.cpp  boss_thrashbite_the_scornful.cpp  cathedral_of_eternal_night.cpp
src/server/newscripts/Legion/CourtofStars/: boss_advisor_melandrus.cpp  boss_patrol_captain_gerdo.cpp  boss_talixae_flamewreath.cpp  court_of_stars.h
src/server/newscripts/Legion/DarkHeartThicket/: boss_arch_druid_glaidalis.cpp  boss_dresaron.cpp  boss_oakheart.cpp  boss_shade_of_xavius.cpp
src/server/newscripts/Legion/EyeofAzshara/: boss_king_deepbeard.cpp  boss_lady_hatecoil.cpp  boss_serpentrix.cpp  boss_warlord_parjesh.cpp  boss_wrath_of_azshara.cpp  eye_of_azshara.h  instance_eye_of_azshara.cpp
src/server/newscripts/Legion/HallsofValor/: boss_fenryr.cpp  boss_god_king_skovald.cpp  boss_hymdall.cpp  boss_hyrja.cpp  boss_odyn.cpp  instance_halls_of_valor.cpp
src/server/newscripts/Legion/MawofSouls/: boss_harbaron.cpp  boss_helya.cpp  boss_ymiron_the_fallen_king.cpp  (+2 more)
src/server/newscripts/Pandaria/: CMakeLists.txt  boss_galion.cpp  boss_nalak.cpp  boss_oondasta.cpp  krasarang_wilds.cpp  kun_lai_summit.cpp  timeless_isle.cpp  valley_of_the_four_winds.cpp  wandering_island.cpp
src/server/proto/: CMakeLists.txt
src/server/proto/Client/: account_service.pb.cc  authentication_service.pb.cc  challenge_service.pb.cc  channel_service.pb.cc  connection_service.pb.cc  friends_service.pb.cc  game_utilities_service.pb.cc  presence_service.pb.cc  report_service.pb.cc  resource_service.pb.cc  user_manager_service.pb.cc
src/server/scripts/Commands/: CMakeLists.txt  cs_account.cpp  cs_achievement.cpp  cs_ban.cpp  cs_battlenet_account.cpp  cs_character.cpp  cs_debug.cpp  cs_event.cpp  cs_gobject.cpp  cs_instance.cpp  cs_learn.cpp  cs_lookup.cpp  cs_misc.cpp  cs_modify.cpp  cs_npc.cpp  cs_quest.cpp  cs_reload.cpp  cs_reset.cpp  cs_server.cpp
src/server/scripts/Kalimdor/: CMakeLists.txt  azuremyst_isle.cpp  bloodmyst_isle.cpp
src/server/shared/: CMakeLists.txt  Common.cpp  Common.h  Containers.h  Define.h  GitRevision.cpp  GitRevision.h  SystemConfig.h
src/server/shared/Configuration/: Config.cpp  Config.h
src/server/shared/Cryptography/: ARC4.cpp  ARC4.h  BigNumber.cpp  RSA.cpp  RSA.h  SHA1.cpp  SHA1.h  SHA256.cpp  SHA256.h
src/server/shared/DataStores/: DB2Store.cpp  DB2Store.h
src/server/shared/Database/: AdhocStatement.cpp  AdhocStatement.h  DatabaseWorkerPool.h  Field.cpp  MySQLConnection.cpp  MySQLThreading.cpp  PreparedStatement.cpp  PreparedStatement.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  Transaction.cpp  Transaction.h
src/server/shared/Debugging/: Errors.cpp  Errors.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/server/shared/JSON/: ProtobufJSON.cpp
src/server/shared/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  Log.cpp  Log.h  LogOperation.cpp  LogOperation.h  Logger.cpp
src/server/shared/Metric/: Metric.cpp  Metric.h
src/server/shared/Networking/: AsyncAcceptor.h  NetworkThread.h  Socket.h  SocketMgr.h
src/server/shared/Packets/: ByteBuffer.cpp
src/server/shared/Realm/: RealmList.cpp  RealmList.h
src/server/shared/Threading/: LockedMap.h
src/server/shared/Utilities/: EventProcessor.cpp  EventProcessor.h  FunctionProcessor.cpp  HashFuctor.h  StringFormat.h  TaskScheduler.cpp  TaskScheduler.h  Util.cpp  Util.h  safe_ptr.h
(+1009 files in other folders)
